--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,1 +1,12 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: ai-autoscaler-service
+spec:
+  selector:
+    app: ai-autoscaler
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
